# cmd/api/api.go
@@ -71,6 +71,8 @@ func (app *application) mount() *chi.Mux {
 
 		// USERS
 		r.Route("/users", func(r chi.Router) {
+			r.Put("/activate/{token}", app.activateUserHandler)
+
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
 				r.Get("/", app.getUserHandler)
@@ -83,10 +85,11 @@ func (app *application) mount() *chi.Mux {
 				r.Get("/feed", app.getUserFeedHandler)
 			})
 
-			// Public routes
-			r.Route("/authentication", func(r chi.Router) {
-				r.Post("/user", app.registerUserHandler)
-			})
+		})
+		
+		// Public routes
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 	})
 
